--- a/index.html
+++ b/index.html
@@ -1,3 +1,53 @@
+<head>
+    <style>
+        body {
+    font-family: Arial, sans-serif;
+}
+
+form {
+    width: 100%;
+    margin: 20px auto;
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+th, td {
+    border: 1px solid #000;
+    padding: 5px;
+    text-align: left;
+}
+
+th {
+    background-color: #666;
+    color: #fff;
+}
+
+td {
+    background-color: #d0e7f3;
+}
+
+textarea {
+    width: 100%;
+    height: 100%;
+    resize: none;
+}
+
+input[type="text"] {
+    width: 100%;
+    box-sizing: border-box;
+}
+
+button {
+    width: 100%;
+    padding: 5px;
+    box-sizing: border-box;
+}
+    </style>
+</head>
+
 <form id="propertyForm">
     <table>
         <thead>
@@ -60,3 +110,7 @@
         </tbody>
     </table>
 </form>
+
+<script>
+    
+</script>
